FEAT: Added sorting and pagination feature - Added sorting feature - Added pagination feature
